dev/test_programs/INVALID/group5/fallthrough_in_final_switch_clause.go
package final_fallthrough

func main() {
    switch {
    default:
        fallthrough
    }
}
